moved parameter stuff in detailedo2 to suite mts, new parameter handling for faketum, primitive glucose model with only diffusion involved

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -3,8 +3,11 @@ cmake_minimum_required(VERSION 2.6)
 # bash wrapper
 message(STATUS "Installing bash wrapper")
 #install_programs( "${CMAKE_INSTALL_PREFIX}/utils" bash_wrapper.sh)
-add_executable(vessel_wrapper tumorcode_to_milotti_wrapper.cpp)
-target_link_libraries(vessel_wrapper boost_program_options krebs_ milotti_mts gmp CGAL)
+if(USE_MILOTTI_MTS)
+  add_executable(vessel_wrapper tumorcode_to_milotti_wrapper.cpp)
+  target_link_libraries(vessel_wrapper boost_program_options krebs_ milotti_mts gmp CGAL)
+  install(TARGETS vessel_wrapper RUNTIME DESTINATION bin)
+endif()
 install_programs( "/utils" bash_wrapper.sh)
-install(TARGETS vessel_wrapper RUNTIME DESTINATION bin)
+
 # 	DESTINATION ${CMAKE_INSTALL_PREFIX}/utils)
