--- a/src/tumors/CMakeLists.txt
+++ b/src/tumors/CMakeLists.txt
@@ -65,9 +65,11 @@ message("link_tumor_to_this: ${myLibs} ")
 # target_link_libraries(tumors_ ${myLibs})
 target_link_libraries(tumors_ krebs_)
 target_link_libraries(tumors_ detailedo2_)
-target_link_libraries(tumors_ milotti_mts)
-target_link_libraries(tumors_ gmp)
-target_link_libraries(tumors_ CGAL)
+if(USE_MILOTTI_MTS)
+  target_link_libraries(tumors_ milotti_mts)
+  target_link_libraries(tumors_ gmp)
+  target_link_libraries(tumors_ CGAL)
+endif()
 
 #set_target_properties(tumors_ PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 
