changed milotti_mts to vbl

--- a/src/tumors/CMakeLists.txt
+++ b/src/tumors/CMakeLists.txt
@@ -5,7 +5,7 @@ include_directories(../common)
 
 if(USE_MILOTTI_MTS)
   file(GLOB Tumor_Files "*.cpp")
-  set(myLibs "${myLibs};milotti_mts")
+  set(myLibs "${myLibs};vbl")
   message("CMAKE_CXX_COMPILER:        ${CMAKE_CXX_COMPILER}")
   message("CMAKE_CXX_COMPILER_ID:     ${CMAKE_CXX_COMPILER_ID}")
   if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
@@ -66,7 +66,7 @@ message("link_tumor_to_this: ${myLibs} ")
 target_link_libraries(tumors_ krebs_)
 target_link_libraries(tumors_ detailedo2_)
 if(USE_MILOTTI_MTS)
-  target_link_libraries(tumors_ milotti_mts)
+  target_link_libraries(tumors_ vbl)
   target_link_libraries(tumors_ gmp)
   target_link_libraries(tumors_ CGAL)
 endif()
