find threads cmake

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.6)
 
 # bash wrapper
 message(STATUS "Installing bash wrapper")
-#install_programs( "${CMAKE_INSTALL_PREFIX}/utils" bash_wrapper.sh)
-install_programs( "/utils" bash_wrapper.sh)
-# 	DESTINATION ${CMAKE_INSTALL_PREFIX}/utils)
+
+#comment out in this branch
+#install_programs( "/utils" bash_wrapper.sh)
+
