added bash wrapper

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -3,6 +3,5 @@ cmake_minimum_required(VERSION 2.6)
 # bash wrapper
 message(STATUS "Installing bash wrapper")
 
-#comment out in this branch
-#install_programs( "/utils" bash_wrapper.sh)
+install_programs( "/utils" bash_wrapper.sh)
 
