added example on how to use trilinos with mpi

--- a/src/tests/trilinos/CMakeLists.txt
+++ b/src/tests/trilinos/CMakeLists.txt
@@ -10,3 +10,6 @@ endif()
 add_executable(PrecBiCGStabExFile PrecBiCGStabExFile.cpp)
 target_link_libraries(PrecBiCGStabExFile ${myLibs})
 install(TARGETS PrecBiCGStabExFile RUNTIME DESTINATION bin)
+
+add_executable(IfpackBelos2 IfpackBelos2.cpp)
+target_link_libraries(IfpackBelos2 ${myLibs})
