--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,7 @@ message("TrilinosDIR: ${TrilinosDIR}")
 
 include(${CMAKE_ROOT}/Modules/CMakeDependentOption.cmake)
 
-option(USE_MILOTTI_MTS "decide to use libvbl.so" ON)
+option(USE_MILOTTI_MTS "decide to use libvbl.so" OFF)
 if(USE_MILOTTI_MTS)
   message("MILOTTI_MTS preprocessor defined")
   add_definitions(-DMILOTTI_MTS)
