--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -21,7 +21,7 @@ install(TARGETS test_stepper RUNTIME DESTINATION bin)
 
 if(USE_MILOTTI_MTS)
   add_executable(test_ann test_ann.cpp)
-  target_link_libraries(test_ann ANN)
+  target_link_libraries(test_ann ann)
   install(TARGETS test_ann RUNTIME DESTINATION bin)
 endif()
 # add_executable(test_level_set test_level_set.cpp)
@@ -103,4 +103,4 @@ if(USE_ADAPTION)
     endif()
   endif()
 endif()
-#add_subdirectory(trilinos)
+add_subdirectory(trilinos)
