--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,9 @@ endif()
 add_subdirectory(detailedO2)
 add_subdirectory(common)
 add_subdirectory(python_krebsutils)
-add_subdirectory(tests)
+if(BUILD_TESTS)
+  add_subdirectory(tests)
+endif()
 add_subdirectory(mwlib)
 add_subdirectory(mwlib_tests)
 
