--- a/src/tests/H5/CMakeLists.txt
+++ b/src/tests/H5/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_executable(testH5Cpp testH5Cpp.cpp)
-target_link_libraries(testH5Cpp "common;${myLibs}")
+find_package(Boost REQUIRED COMPONENTS "random")
+target_link_libraries(testH5Cpp "common;${myLibs};${Boost_RANDOM_LIBRARY}")
 install(TARGETS testH5Cpp RUNTIME DESTINATION bin)
 
 add_executable(read testH5Cpp_read.cpp)
