--- a/src/tumors/CMakeLists.txt
+++ b/src/tumors/CMakeLists.txt
@@ -71,7 +71,7 @@ target_link_libraries(tumors_ detailedo2_)
 if(USE_MILOTTI_MTS)
   target_link_libraries(tumors_ vbl)
   #target_link_libraries(tumors_ gmp)
-  target_link_libraries(tumors_ CGAL)
+  #target_link_libraries(tumors_ CGAL)
   #target_link_libraries(tumors_ ANN)
 endif()
 
