--- a/src/mwlib/CMakeLists.txt
+++ b/src/mwlib/CMakeLists.txt
@@ -7,3 +7,5 @@ file(GLOB mwLibFiles "*.cpp")
 
 add_library(mwlib STATIC ${mwLibFiles})
 target_link_libraries(mwlib common)
+
+install(DIRECTORY . DESTINATION "include/mwlib" FILES_MATCHING PATTERN "*.h")
