--- a/src/tests/H5/CMakeLists.txt
+++ b/src/tests/H5/CMakeLists.txt
@@ -1,10 +1,12 @@
 
-add_executable(testH5Cpp testH5Cpp.cpp)
-find_package(Boost REQUIRED COMPONENTS "random")
-target_link_libraries(testH5Cpp "common;${myLibs};${Boost_RANDOM_LIBRARY}")
-install(TARGETS testH5Cpp RUNTIME DESTINATION bin)
+# these examples are not working with older boost implementations
 
-add_executable(read testH5Cpp_read.cpp)
-target_link_libraries(read "common;${myLibs}")
-install(TARGETS read RUNTIME DESTINATION bin)
+# add_executable(testH5Cpp testH5Cpp.cpp)
+# find_package(Boost REQUIRED COMPONENTS "random")
+# target_link_libraries(testH5Cpp "common;${myLibs};${Boost_RANDOM_LIBRARY}")
+# install(TARGETS testH5Cpp RUNTIME DESTINATION bin)
+# 
+# add_executable(read testH5Cpp_read.cpp)
+# target_link_libraries(read "common;${myLibs}")
+# install(TARGETS read RUNTIME DESTINATION bin)
 
