--- a/src/tests/intel/CMakeLists.txt
+++ b/src/tests/intel/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_executable(test_intel_compiler test_intel_compiler.cpp)
-target_link_libraries(test_intel_compiler ${myLibs})
-install(TARGETS test_intel_compiler RUNTIME DESTINATION bin)
+
+# intel test do not make sense when using gcc
+# add_executable(test_intel_compiler test_intel_compiler.cpp)
+# target_link_libraries(test_intel_compiler ${myLibs})
+# install(TARGETS test_intel_compiler RUNTIME DESTINATION bin)
